# StockMonsterHunter

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  mcp-config.example.md  pyproject.toml
.claude/commands/: day-trading-recommender.md  long-stock-recommender.md
cli/: fetch_fmp_openbb_to_postgres.py  recommend_long_candidates.py  sync_earnings_to_postgres.py  sync_fundamentals_to_postgres.py  sync_us_universe_to_postgres.py
mcp_servers/: postgres_market_data_server.py
outputs/trading_reco_fix/: node_modules
scripts/: sync_today.sh
skills/day-trading-recommender/: SKILL.md
skills/day-trading-recommender/agents/: openai.yaml
skills/day-trading-recommender/references/: case-studies.md
skills/day-trading-recommender/references/core/: output-contract.md  (+2 more)
skills/day-trading-recommender/scripts/: README.md  gap_candidates.sql  micro_momentum.sql  squeeze_candidates.sql
skills/long-stock-recommender/: SKILL.md
skills/long-stock-recommender/agents/: openai.yaml
skills/long-stock-recommender/references/: case-studies.md
skills/long-stock-recommender/scripts/: README.md  earnings_reaction_check.sql  mode5_candidates.sql  stacked_signals.sql
skills/monster-stock-hunter/: SKILL.md
skills/monster-stock-hunter/agents/: openai.yaml
skills/monster-stock-hunter/references/: case-studies.md
skills/monster-stock-hunter/scripts/: hyper_elastic_audit.sql  ignition_candidate_replay.sql  leaderboard_audit.sql  monster_weekly_backtest.sql  reclaim_bounce_audit.sql  rolling_ignition_walkforward.sql  validate_extended_hours_quote_rules.sh
(+50 files in other folders)
